methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:23: error: not found: value faireV
  faireV();faireV();faireV();faireV()
  ^PictureMono2:23: error: not found: value faireV
  faireV();faireV();faireV();faireV()
           ^PictureMono2:23: error: not found: value faireV
  faireV();faireV();faireV();faireV()
                    ^PictureMono2:23: error: not found: value faireV
  faireV();faireV();faireV();faireV()
                             ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                           ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                     ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                               ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                         ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                   ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                             ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                    ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                              ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                        ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                                  ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                                            ^PictureMono2:24: error: not found: value avancer
def rangee() {faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();faireMotif();avancer();avancer();avancer();avancer();avancer();avancer();}
                                                                                                                                                      ^PictureMono2:26: error: not found: value reculer
def remiseEnPlace(){for (i<-1 to 21) {reculer()}
                                      ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                   ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                             ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                                       ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                                                 ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                                                           ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                                                                     ^PictureMono2:28: error: not found: value avancer
                   avancer();avancer();avancer();avancer();avancer();avancer();avancer();
                                                                               ^